--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -3,8 +3,6 @@
 {% block content %} 
 <h2>Hello From Saros! </h2>
 {% if debug %}
-<h3>Debug is on!</h3>
-{% else %} 
-<h3>Debug is off!</h3>
+<h3 class="text-info">Debug is on!</h3>
 {% endif %}
 {% endblock content %}
