--- a/posts/templates/posts/posts.html
+++ b/posts/templates/posts/posts.html
@@ -5,9 +5,9 @@
     {% for post in posts %} 
     <div class="card bg-light text-dark m-3">
         <div class="card-body"> 
-            <a href="{% url 'posts:post_detail' post.slug %}">
-                <h3>{{post.title}}</h3>
-                <p>Created at: {{post.published_at}}</p>
+            <a href="{% url 'posts:post_detail' username=post.user.username slug=post.slug %}">
+                <h3>{{post.title|capfirst}}</h3>
+                <p class="text-muted">{{post.user.username}}: {{post.created_at}}</p>
             </a>
         </div>
     </div>
@@ -15,4 +15,30 @@
     <h2 style="text-align: center;">No Post Published Yet!</h2>
     {% endfor %}
 </div>
+{% if is_paginated %}
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">
+            <i class="fa fa-angle-left"></i>
+            <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        {% endif %}
+        {% for page in paginator %}
+            <li class="page-item {% if page.number == page_obj.number %}active{% endif %}"><a class="page-link" href="?page={{ page.number}}">{{page.number}}</a></li>
+        {% endfor %}
+        {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                <i class="fa fa-angle-right"></i>
+                <span class="sr-only">Next</span>
+                </a>
+            </li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
+  
 {% endblock content %}
