--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <!-- Theme CSS -->
     <link type="text/css" href="{% static 'assets/css/argon-design-system.min.css' %}" rel="stylesheet">
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </head>
 <body>
@@ -51,7 +51,7 @@
                     
                     <ul class="navbar-nav ml-lg-auto">
                         <li class="nav-item">
-                            <a class="nav-link nav-link-icon" href="{% url 'posts:post_list' %}">
+                            <a class="nav-link nav-link-icon" href="{% url 'posts:posts' %}">
                                 <i class="ni ni-collection"></i>
                                 <span class="nav-link-inner--text d-lg-none">Posts</span>
                             </a>
@@ -64,18 +64,21 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="ni ni-settings-gear-65"></i>
-                                <span class="nav-link-inner--text d-lg-none">Settings</span>
+                                <i class="ni ni-single-02"></i>
+                                <span class="nav-link-inner--text d-lg-none">Account</span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-                                <a class="dropdown-item" href="{% url 'posts:post_list' %}">Posts</a>
-                                <a class="dropdown-item" href="{% url 'posts:create_post' %}">Create Post</a>
+                                {% if user.is_authenticated %} 
+                                    <a class="dropdown-item" href="{% url 'users:profile' user.id %}">Profile</a>
+                                {% else %} 
+                                    <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                                {% endif %}
                                 
                                 <div class="dropdown-divider"></div>
                                 {% if user.is_authenticated %}
-                                <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
+                                    <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                                 {% else %} 
-                                <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
+                                    <a class="dropdown-item" href="{% url 'account_signup' %}">Signup</a>
                                 {% endif %}
                             </div>
                         </li>
