--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
 
     <!-- google addsense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8015840948655941" crossorigin="anonymous"></script>
+
+    <!-- umami analytics -->
+    <script async defer data-website-id="8c7554f8-0129-4961-98a7-05c683b47ec9" src="https://bdbea9583705.up.railway.app/umami.js"></script>
 </head>
 <body>
     <header>
